[project]
name = "conduit-forge"
version = "0.1.0"
description = "Build tool for Conduit packages"
requires-python = ">=3.10"
dependencies = ["tomli>=2.0.0;python_version<'3.11'"]

[project.scripts]
forge = "conduit_forge.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
